move from jmf to fmj update jain-sip to the latest 1.2.102 fix error on install in izpack add MediaPreference start video support for sip
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@11038 b35dd754-fafc-0310-a699-88a17e54d16e